format and lint

--- a/package.json
+++ b/package.json
@@ -1,53 +1,53 @@
 {
-  "name": "spax-website",
-  "author": "@wadhah mahrouk",
-  "license": "GPL-3.0-or-later",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "type-check": "tsc --pretty --noEmit",
-    "format": "prettier --write .",
-    "prod": "next build && next start",
-    "lint": "eslint . --ext ts --ext tsx --ext js"
-  },
-  "dependencies": {
-    "@analytics/google-analytics": "^0.5.2",
-    "analytics": "^0.6.6",
-    "clsx": "^1.1.1",
-    "dayjs": "^1.10.3",
-    "next": "10.0.5",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-icons": "^4.1.0",
-    "react-player": "^2.7.2",
-    "react-portal": "^4.2.1",
-    "sass": "^1.32.4",
-    "styled-breakpoints": "^9.0.9",
-    "styled-components": "^5.2.1",
-    "use-analytics": "^0.0.5"
-  },
-  "devDependencies": {
-    "@types/node": "^14.14.21",
-    "@types/react": "^17.0.0",
-    "@types/styled-components": "^5.1.7",
-    "@typescript-eslint/eslint-plugin": "^4.14.0",
-    "@typescript-eslint/parser": "^4.14.0",
-    "babel-jest": "^26.6.3",
-    "babel-plugin-styled-components": "^1.12.0",
-    "eslint": "^7.18.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-react": "^7.22.0",
-    "husky": "^4.3.8",
-    "lint-staged": "^10.5.3",
-    "postcss": "^8.2.4",
-    "postcss-loader": "^4.1.0",
-    "postcss-preset-env": "^6.7.0",
-    "prettier": "^2.2.1",
-    "serve": "^11.3.2",
-    "tailwindcss": "^2.0.2",
-    "typescript": "^4.1.3",
-    "typescript-plugin-css-modules": "^3.0.1"
-  }
+	"name": "spax-website",
+	"author": "@wadhah mahrouk",
+	"license": "GPL-3.0-or-later",
+	"version": "1.0.0",
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"type-check": "tsc --pretty --noEmit",
+		"format": "prettier --write .",
+		"prod": "next build && next start",
+		"lint": "eslint . --ext ts --ext tsx --ext js --fix"
+	},
+	"dependencies": {
+		"@analytics/google-analytics": "^0.5.2",
+		"analytics": "^0.6.6",
+		"clsx": "^1.1.1",
+		"dayjs": "^1.10.3",
+		"next": "10.0.5",
+		"react": "^17.0.1",
+		"react-dom": "^17.0.1",
+		"react-icons": "^4.1.0",
+		"react-player": "^2.7.2",
+		"react-portal": "^4.2.1",
+		"sass": "^1.32.4",
+		"styled-breakpoints": "^9.0.9",
+		"styled-components": "^5.2.1",
+		"use-analytics": "^0.0.5"
+	},
+	"devDependencies": {
+		"@types/node": "^14.14.21",
+		"@types/react": "^17.0.0",
+		"@types/styled-components": "^5.1.7",
+		"@typescript-eslint/eslint-plugin": "^4.15.1",
+		"@typescript-eslint/parser": "^4.15.1",
+		"babel-jest": "^26.6.3",
+		"babel-plugin-styled-components": "^1.12.0",
+		"eslint": "^7.18.0",
+		"eslint-config-prettier": "^7.2.0",
+		"eslint-plugin-react": "^7.22.0",
+		"husky": "^4.3.8",
+		"lint-staged": "^10.5.3",
+		"postcss": "^8.2.4",
+		"postcss-loader": "^4.1.0",
+		"postcss-preset-env": "^6.7.0",
+		"prettier": "^2.2.1",
+		"serve": "^11.3.2",
+		"tailwindcss": "^2.0.2",
+		"typescript": "^4.1.3",
+		"typescript-plugin-css-modules": "^3.0.1"
+	}
 }
