--- a/package.json
+++ b/package.json
@@ -50,5 +50,14 @@
 		"tailwindcss": "^2.0.2",
 		"typescript": "^4.1.3",
 		"typescript-plugin-css-modules": "^3.0.1"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged"
+		}
+	},
+	"lint-staged": {
+		"*.{ts,tsx,js}": "yarn type-check && yarn lint",
+		"*.{js,scss,css,md,ts,tsx,json}": "yarn format"
 	}
 }
